feat: add crud rest endpoints that use a database, database migrations, and updated documentation
